NXP-30166/NXP-30169: adapt to 10.10 backport